--- a/src/main/resources/org/example/inventory/hello-view.fxml
+++ b/src/main/resources/org/example/inventory/hello-view.fxml
@@ -22,12 +22,14 @@
         <TextField fx:id="productId" layoutX="100" GridPane.columnIndex="0" GridPane.rowIndex="0" prefWidth="395" visible="false" />
         <Label text="Product Name:" GridPane.columnIndex="0" GridPane.rowIndex="0" />
         <TextField fx:id="productName" GridPane.columnIndex="1" GridPane.rowIndex="0" prefWidth="395" />
+        <Label text="Product Category:" GridPane.columnIndex="0" GridPane.rowIndex="1" />
+        <TextField fx:id="productCategory" GridPane.columnIndex="1" GridPane.rowIndex="1" prefWidth="395" />
 
-        <Label text="Product Quantity:" GridPane.columnIndex="0" GridPane.rowIndex="1" />
-        <TextField fx:id="productQuantity" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+        <Label text="Product Quantity:" GridPane.columnIndex="0" GridPane.rowIndex="2" />
+        <TextField fx:id="productQuantity" GridPane.columnIndex="1" GridPane.rowIndex="2" />
 
-        <Label text="Product Price:" GridPane.columnIndex="0" GridPane.rowIndex="2" />
-        <TextField fx:id="productPrice" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+        <Label text="Product Price:" GridPane.columnIndex="0" GridPane.rowIndex="3" />
+        <TextField fx:id="productPrice" GridPane.columnIndex="1" GridPane.rowIndex="3" />
     </GridPane>
     <HBox spacing="10">
         <Button fx:id="productAddButton" onAction="#onCreateProductButton" text="Add Product"/>
@@ -43,6 +45,7 @@
         <columns>
             <TableColumn fx:id="columnId" text="Product Id" />
             <TableColumn fx:id="columnName" text="Name" />
+            <TableColumn fx:id="columnCategory" text="Category" />
             <TableColumn fx:id="columnPrice" text="Price"/>
             <TableColumn fx:id="columnQuantity" text="Quantity"/>
             <TableColumn fx:id="columnAction" text="Action"/>
